homework1 part2 modified

--- a/Homework1/part2/index.html
+++ b/Homework1/part2/index.html
@@ -51,8 +51,8 @@
                         <div class="main-block__buttons">
                             <a href="" class="main-block__button">Register today</a>
                         </div>
-                        <img class="partner_hero_image_right" src="/img/Partner hero image right.svg" alt="">
-                        <img class="partner_hero_image_left"src="/img/Partner hero image left.svg" alt="">
+                        <img class="partner_hero_image_right" src="img/Partner hero image right.svg" alt="">
+                        <img class="partner_hero_image_left"src="img/Partner hero image left.svg" alt="">
                     </div>
                 </div>
                 
@@ -60,15 +60,15 @@
                     <h2 class="tethis__title">List. Sell. Grow</h2>
                     <div class="tethis__description">
                         <div class="description-item">
-                            <img src="/img/all in one platform.svg" alt="">
+                            <img src="img/all in one platform.svg" alt="">
                             <div class="description">Be a part of the only  All-In-One platform for IT services</div>
                         </div>
                         <div class="description-item">
-                            <img src="/img/find your next customer.svg" alt="">
+                            <img src="img/find your next customer.svg" alt="">
                             <div class="description">Come closer to finding your next customer</div>
                         </div>
                         <div class="description-item">
-                            <img src="/img/grow your business.svg" alt="">
+                            <img src="img/grow your business.svg" alt="">
                             <div class="description">Grow your business with a single click</div>
                         </div>
                     </div>
@@ -83,12 +83,12 @@
                                 </div>
                             </td>
                             <td class="main_block td">
-                                <img class="table-img _right" src="/img/Your channel program  on steroids.svg" alt="">
+                                <img class="table-img _right" src="img/Your channel program  on steroids.svg" alt="">
                             </td>
                         </tr>
                         <tr class="table-row">
                             <td class="main_block td">
-                                <img class="table-img _left" src="/img/Become the vendor everyone wants to buy from.svg" alt="">
+                                <img class="table-img _left" src="img/Become the vendor everyone wants to buy from.svg" alt="">
                             </td>
                             <td class="main_block td">
                                 <div class="table-text-item">
@@ -96,7 +96,7 @@
                                     <div class="description _content">Gain brand authority and visibility with the help of the largest IT service ecosystem. Find customers who are looking for your solution right now!</div>
                                     <div class="item-link">
                                         <a href="" class="item-link-link">Signup now</a>
-                                        <img src="/img/Right menu Arrow.svg" alt="">
+                                        <img src="img/Right menu Arrow.svg" alt="">
                                     </div>
                                     
                                 </div>
@@ -109,17 +109,17 @@
                                     <div class="description _content">Share collaterals and documents that are automatically branded. Leverage a rich partner network that sells your solution exactly the way your best salesman would.</div>
                                     <div class="item-link">
                                         <a href="" class="item-link-link">Signup now</a>
-                                        <img class="table-img _right" src="/img/Right menu Arrow.svg" alt="">
+                                        <img class="table-img _right" src="img/Right menu Arrow.svg" alt="">
                                     </div>
                                 </div>
                             </td>
                             <td class="main_block td">
-                                <img src="/img/It’s like having Your best Salesman on autopilot.svg" alt="">
+                                <img src="img/It’s like having Your best Salesman on autopilot.svg" alt="">
                             </td>
                         </tr>
                         <tr class="table-row">
                             <td class="main_block td">
-                                <img class="table-img _left" src="/img/Track your channel performance.svg" alt="">
+                                <img class="table-img _left" src="img/Track your channel performance.svg" alt="">
                             </td>
                             <td class="main_block td">
                                 <div class="table-text-item">
@@ -127,7 +127,7 @@
                                     <div class="description _content">Monitor the health and revenue of your channel program and streamline your campaign to win more customers within Zomentum.</div>
                                     <div class="item-link">
                                         <a href="" class="item-link-link">Signup now</a>
-                                        <img src="/img/Right menu Arrow.svg" alt="">
+                                        <img src="img/Right menu Arrow.svg" alt="">
                                     </div>
                                 </div>
                             </td>
@@ -139,12 +139,12 @@
                                     <div class="description _content">Gather insights about top channel sellers and find out what pitch and collaterals ensure maximum profitability. Win happy customers with an optimized sales playbook.</div>
                                     <div class="item-link">
                                         <a href="" class="item-link-link">Signup now</a>
-                                        <img class="table-img _right" src="/img/Right menu Arrow.svg" alt="">
+                                        <img class="table-img _right" src="img/Right menu Arrow.svg" alt="">
                                     </div>
                                 </div>
                             </td>
                             <td class="main_block td">
-                                <img src="/img/Get The best version of  Your sales playbook.svg" alt="">
+                                <img src="img/Get The best version of  Your sales playbook.svg" alt="">
                             </td>
                         </tr>
                     </table>
@@ -152,8 +152,7 @@
             </div>
         </main>
         <footer class="footer footer">
-            Ya pidval
-            <table class="footer-table">
+            <table class="footer-table _container">
                 <tr class="footer-row">
                     <th class="th-header">Product</th>
                     <th class="th-header">Company</th>
