--- a/Homework4/index.html
+++ b/Homework4/index.html
@@ -23,6 +23,7 @@
             <div class="sort">
                 <label for="cars">Sort by:</label>
                 <select class="select"> <!--Supplement an id here instead of using 'name'-->
+                    <option value="custom">custom</option>
                     <option value="data">data</option>
                     <option value="name">name</option>
                   </select>
