--- a/Homework1/part2/index.html
+++ b/Homework1/part2/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zomentum</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="css/reset.css">
 </head>
 <body>
    <div class="wrapper">
@@ -13,6 +16,10 @@
             <div class="header__container">
                 <div class="header__logo">
                     <img src="img/header-logo.png" alt="Zomentum header logo">
+                </div>
+                <div class="header-burger">
+                    <input type="checkbox" class="check-menu">
+                    <span></span>
                 </div>
                 <nav class="header__menu menu">
                     <ul class="menu__list">
@@ -74,23 +81,23 @@
                     </div>
                 </div>
                 <div class="main-block__table _container">
-                    <table class="content-table">
-                        <tr class="table-row">
-                            <td class="main_block td">
+                    <div class="content-table">
+                        <div class="table-row">
+                            <div class="main_block td">
                                 <div class="table-text-item">
                                     <div class="content-item-header _content">Your channel program on steroids</div>
                                     <div class="description _content">Tired of finding MSPs that can help you boost your channel sales?  You’re in luck, because they’re all here.</div>
                                 </div>
-                            </td>
-                            <td class="main_block td">
+                            </div>
+                            <div class="main_block td">
                                 <img class="table-img _right" src="img/Your channel program  on steroids.svg" alt="">
-                            </td>
-                        </tr>
-                        <tr class="table-row">
-                            <td class="main_block td">
+                            </div>
+                        </div>
+                        <div class="table-row">
+                            <div class="main_block td">
                                 <img class="table-img _left" src="img/Become the vendor everyone wants to buy from.svg" alt="">
-                            </td>
-                            <td class="main_block td">
+                            </div>
+                            <div class="main_block td">
                                 <div class="table-text-item">
                                     <div class="content-item-header _content">Become the vendor everyone wants to buy from</div>
                                     <div class="description _content">Gain brand authority and visibility with the help of the largest IT service ecosystem. Find customers who are looking for your solution right now!</div>
@@ -100,10 +107,10 @@
                                     </div>
                                     
                                 </div>
-                            </td>
-                        </tr>
-                        <tr class="table-row">
-                            <td class="main_block td">
+                            </div>
+                        </div>
+                        <div class="table-row">
+                            <div class="main_block td">
                                 <div class="table-text-item">
                                     <div class="content-item-header _content">It’s like having Your best Salesman on autopilot</div>
                                     <div class="description _content">Share collaterals and documents that are automatically branded. Leverage a rich partner network that sells your solution exactly the way your best salesman would.</div>
@@ -112,16 +119,16 @@
                                         <img class="table-img _right" src="img/Right menu Arrow.svg" alt="">
                                     </div>
                                 </div>
-                            </td>
-                            <td class="main_block td">
+                            </div>
+                            <div class="main_block td">
                                 <img src="img/It’s like having Your best Salesman on autopilot.svg" alt="">
-                            </td>
-                        </tr>
-                        <tr class="table-row">
-                            <td class="main_block td">
+                            </div>
+                        </div>
+                        <div class="table-row">
+                            <div class="main_block td">
                                 <img class="table-img _left" src="img/Track your channel performance.svg" alt="">
-                            </td>
-                            <td class="main_block td">
+                            </div>
+                            <div class="main_block td">
                                 <div class="table-text-item">
                                     <div class="content-item-header _content">Track your channel performance</div>
                                     <div class="description _content">Monitor the health and revenue of your channel program and streamline your campaign to win more customers within Zomentum.</div>
@@ -130,10 +137,10 @@
                                         <img src="img/Right menu Arrow.svg" alt="">
                                     </div>
                                 </div>
-                            </td>
-                        </tr>
-                        <tr class="table-row">
-                            <td class="main_block td">
+                            </div>
+                        </div>
+                        <div class="table-row">
+                            <div class="main_block td">
                                 <div class="table-text-item">
                                     <div class="content-item-header _content">Get The best version of Your sales playbook</div>
                                     <div class="description _content">Gather insights about top channel sellers and find out what pitch and collaterals ensure maximum profitability. Win happy customers with an optimized sales playbook.</div>
@@ -142,60 +149,50 @@
                                         <img class="table-img _right" src="img/Right menu Arrow.svg" alt="">
                                     </div>
                                 </div>
-                            </td>
-                            <td class="main_block td">
+                            </div>
+                            <div class="main_block td">
                                 <img src="img/Get The best version of  Your sales playbook.svg" alt="">
-                            </td>
-                        </tr>
-                    </table>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
         <footer class="footer footer">
-            <table class="footer-table _container">
-                <tr class="footer-row">
-                    <th class="th-header">Product</th>
-                    <th class="th-header">Company</th>
-                    <th class="th-header">Users</th>
-                    <th class="th-header">Guides</th>
-                    <th class="th-header">Contact Us</th>
-                </tr>
-                <tr class="footer-row">
-                    <td class="table-text">Features</td>
-                    <td class="table-text">About us</td>
-                    <td class="table-text">Login</td>
-                    <td class="table-text">MSP</td>
-                    <td class="table-text">Address</td>
-                </tr>
-                <tr class="footer-row">
-                    <td class="table-text">Pricing</td>
-                    <td class="table-text">Contact us</td>
-                    <td class="table-text">Get a demo</td>
-                    <td class="table-text">MSP Sales</td>
-                    <td class="table-text"></td>
-                </tr>
-                <tr class="footer-row">
-                    <td class="table-text">Integrations</td>
-                    <td class="table-text">Submit a ticket</td>
-                    <td class="table-text">Talk to us</td>
-                    <td class="table-text"></td>
-                    <td class="table-text"></td>
-                </tr>
-                <tr class="footer-row">
-                    <td class="table-text">Product</td>
-                    <td class="table-text">Privacy policy</td>
-                    <td class="table-text">Privacy policy</td>
-                    <td class="table-text"></td>
-                    <td class="table-text"></td>
-                </tr>
-                <tr class="footer-row">
-                    <td class="table-text"></td>
-                    <td class="table-text">Terms & conditions</td>
-                    <td class="table-text">Terms & conditions</td>
-                    <td class="table-text"></td>
-                    <td class="table-text"></td>
-                </tr>
-            </table>
+            <div class="footer-table _container">
+                <div class="footer-col">
+                    <div class="th-header">Product</div>
+                    <div class="table-text">Features</div>
+                    <div class="table-text">Pricing</div>
+                    <div class="table-text">Integrations</div>
+                    <div class="table-text">Product</div>
+                </div>
+                <div class="footer-col">
+                    <div class="th-header">Company</div>
+                    <div class="table-text">About us</div>
+                    <div class="table-text">Contact us</div>
+                    <div class="table-text">Submit a ticket</div>
+                    <div class="table-text">Privacy policy</div>
+                    <div class="table-text">Terms & conditions</div>
+                </div>
+                <div class="footer-col">
+                    <div class="th-header">Users</div>
+                    <div class="table-text">Login</div>
+                    <div class="table-text">Get a demo</div>
+                    <div class="table-text">Talk to us   </div>
+                    <div class="table-text">Privacy policy</div>
+                    <div class="table-text">Terms & conditions</div>
+                </div>
+                <div class="footer-col">
+                    <div class="th-header">Guides</div>
+                    <div class="table-text">MSP</div>
+                    <div class="table-text">MSP Sales</div> 
+                </div>
+                <div class="footer-col">
+                    <div class="th-header">Contact Us</div>
+                    <div class="table-text">Address</div>
+                 </div>
+            </div>
             <div class="footer-aditional _container">
                 <div class="licence table-text">© 2020 Pactora Inc. All rights reserved.</div>
                 <div class="social table-text">Follow us on social</div>
