--- a/Homework6/index.html
+++ b/Homework6/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>My GitHub Profile</title>
 </head>
 <body>
     <div class="wrapper">
+        <div class="loader"></div>
         <h1>My GitHub Profile</h1>
         <div class="profile-info"></div>
         <div class="profile-repos">
             <button class="repos">Show Repositories</button>
+            <div class="repo-items"></div>
         </div>
     </div>
     <script src="script.js"></script>
