--- a/Homework7/index.html
+++ b/Homework7/index.html
@@ -5,8 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tomagotchi</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
+    <h1 class="title">Tomagotchi Game</h1>
+
+    <div class="game-start">
+        <button class="start">Start</button>
+    </div>
+    <div class="game-wrapper">
+
+
+        <div class="display">
+
+            <div class="properties">
+                <div class="property">Name:</div>
+                <div class="property">Health:</div>
+                <div class="property">Saturation:</div>
+                <div class="property">Strendth:</div>
+                <div class="property">Happiness:</div>
+            </div>
+            <div class="values">
+                <div class="name-value"></div>
+                <div class="health-value"></div>
+                <div class="saturation-value"></div>
+                <div class="strength-value"></div>
+                <div class="happiness-value"></div>
+            </div>
+            <img src="349-3497709_tamagotchi-mametchi-mametchi-tamagotchi.png" alt="">
+            <div class="buttons-pannel">
+                <button class="feed">Feed</button>
+                <button class="play">Play</button>
+                <button class="walk">Walk</button>
+                <button class="sleep">Sleep</button>
+            </div>
+        </div>
+
+        </div>
+
+        <script src="script.js"></script>
 </body>
 </html>
