--- a/Homework8/index.html
+++ b/Homework8/index.html
@@ -10,11 +10,15 @@
 <body>
     <div class="form-wrapper">
         <form action="">
-            <div class="input-wrapper">
-                <label for="">First name</label>
-                <input type="text" class="fname">
-                <label for="">Last name</label>
-                <input type="text" class="lname">
+            <div class="doubleinput-wrapper">
+                <div class="input-wrapper firstname">
+                    <label for="">First name</label>
+                    <input type="text" class="fname">
+                </div>
+                <div class="input-wrapper">
+                    <label for="">Last name</label>
+                    <input type="text" class="lname">
+                </div>
             </div>
             <div class="input-wrapper">
                 <label for="">Phone number</label>
@@ -32,8 +36,12 @@
                 <label for="">Confirm password</label>
                 <input type="text" class="cpassword">
             </div>
-            <input type="submit" value="Submit">
+            <input type="submit" value="Submit" class="submit">
         </form>
+    </div>
+
+    <div class="valid-input">
+        <h2>Congratulations! Your information was saved</h2>
     </div>
     <script src="script.js"></script>
 </body>
